add FlightDataPoint class and move csv(s) to src/main/resources/

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>org.example</groupId>
   <artifactId>final-project</artifactId>
-  <version>0.1</version>
+  <version>main-0.1</version>
 
 
   <properties>
